--- a/wir_1.html
+++ b/wir_1.html
@@ -6,84 +6,24 @@
   <title>Das sind Wir - ZBN</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <style>:root{--color-primary-500:oklch(0.52 0.15 240);--color-primary-600:oklch(0.45 0.14 240);--color-gray-50:oklch(0.98 0 0);--color-gray-100:oklch(0.96 0 0);--color-gray-200:oklch(0.90 0 0);--color-gray-600:oklch(0.42 0 0);--color-gray-700:oklch(0.35 0 0);--color-gray-900:oklch(0.15 0 0);--color-text-primary:oklch(0.15 0 0);--color-text-secondary:oklch(0.42 0 0);--font-sans:'Inter',sans-serif;--duration-fast:150ms;--duration-base:250ms;--ease-out:cubic-bezier(0,0,0.2,1);--shadow-lg:0 10px 15px -3px rgba(0,0,0,0.1),0 4px 6px -2px rgba(0,0,0,0.05)}body{font-family:var(--font-sans)!important;background-color:var(--color-gray-50)!important}.nav-link{position:relative;transition:color var(--duration-fast) var(--ease-out)}.nav-link::after{content:'';position:absolute;bottom:-4px;left:0;width:0;height:2px;background:var(--color-primary-500);transition:width var(--duration-base) var(--ease-out)}.nav-link:hover::after{width:100%}.dropdown{position:relative}.dropdown-toggle{cursor:pointer;background:none;border:none;padding:0;font:inherit}.dropdown-menu{position:absolute;top:100%;left:0;min-width:220px;background:white;border:1px solid var(--color-gray-200);border-radius:0.5rem;box-shadow:var(--shadow-lg);opacity:0;visibility:hidden;transform:translateY(-10px);transition:all var(--duration-base) var(--ease-out);z-index:50;margin-top:0.5rem}.dropdown:hover .dropdown-menu{opacity:1;visibility:visible;transform:translateY(0)}.dropdown-menu a{display:block;padding:0.75rem 1rem;color:var(--color-text-secondary);text-decoration:none;transition:all var(--duration-fast) var(--ease-out);font-weight:500}.dropdown-menu a:hover{background-color:var(--color-gray-50);color:var(--color-primary-600);padding-left:1.25rem}.dropdown-menu a:first-child{border-radius:0.5rem 0.5rem 0 0}.dropdown-menu a:last-child{border-radius:0 0 0.5rem 0.5rem}.dropdown-icon{transition:transform var(--duration-fast) var(--ease-out);display:inline-block;margin-left:0.25rem;font-size:0.75rem}.dropdown:hover .dropdown-icon{transform:rotate(180deg)}.mobile-dropdown{overflow:hidden}.mobile-dropdown-toggle{width:100%;display:flex;justify-content:space-between;align-items:center;background:none;border:none;padding:0.5rem 0;font:inherit;color:var(--color-text-secondary);font-weight:500;cursor:pointer;text-align:left}.mobile-dropdown-toggle:hover{color:var(--color-text-primary)}.mobile-dropdown-menu{max-height:0;overflow:hidden;transition:max-height var(--duration-base) var(--ease-out);padding-left:1rem;border-left:2px solid var(--color-gray-200);margin-left:0.5rem}.mobile-dropdown-menu.open{max-height:500px}.mobile-dropdown-menu a{display:block;padding:0.5rem 0;color:var(--color-text-secondary);text-decoration:none;font-size:0.9375rem}.mobile-dropdown-menu a:hover{color:var(--color-primary-600)}.mobile-dropdown-icon{transition:transform var(--duration-fast) var(--ease-out);font-size:0.75rem}.mobile-dropdown-icon.open{transform:rotate(180deg)}</style>
+  <link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin>
+  <link rel="dns-prefetch" href="https://cdnjs.cloudflare.com">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+  <style>:root{--p:oklch(0.45 0.14 240)}body{font-family:'Inter',sans-serif}</style>
 </head>
 <body class="bg-gray-50">
   <nav class="fixed top-0 left-0 right-0 z-50 bg-white shadow-sm">
-    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-      <div class="flex justify-between items-center h-16">
-        <div class="flex-shrink-0">
-          <a href="index_1.html" class="text-2xl font-bold" style="color:var(--color-primary-600)">ZBN</a>
-        </div>
-        <div class="hidden md:flex space-x-8">
-          <a href="index_1.html" class="nav-link text-gray-700 hover:text-gray-900 font-medium">Home</a>
-          <div class="dropdown">
-            <button class="dropdown-toggle nav-link text-gray-700 hover:text-gray-900 font-medium flex items-center">Leistungen<i class="dropdown-icon fas fa-chevron-down"></i></button>
-            <div class="dropdown-menu">
-              <a href="gutachten_1.html">Planung</a>
-              <a href="schaeden_1.html">Begutachtung</a>
-              <a href="problemloesung_1.html">Beratung</a>
-              <a href="leichtbau_1.html">Leichtbau</a>
-            </div>
-          </div>
-          <div class="dropdown">
-            <button class="dropdown-toggle nav-link text-gray-700 hover:text-gray-900 font-medium flex items-center">Wissen<i class="dropdown-icon fas fa-chevron-down"></i></button>
-            <div class="dropdown-menu">
-              <a href="fachbeitrage_1.html">Fachbeiträge</a>
-              <a href="seminare_1.html">Seminare</a>
-            </div>
-          </div>
-          <div class="dropdown">
-            <button class="dropdown-toggle nav-link text-gray-900 font-medium flex items-center">Unternehmen<i class="dropdown-icon fas fa-chevron-down"></i></button>
-            <div class="dropdown-menu">
-              <a href="wir_1.html">Über uns</a>
-              <a href="karriere_1.html">Karriere</a>
-            </div>
-          </div>
-          <a href="kontakt_1.html" class="nav-link text-gray-700 hover:text-gray-900 font-medium">Kontakt</a>
-        </div>
-        <button id="mobile-menu-btn" class="md:hidden p-2 rounded-md text-gray-700 hover:bg-gray-100">
-          <i class="fas fa-bars text-xl"></i>
-        </button>
-      </div>
-    </div>
-    <div id="mobile-menu" class="hidden md:hidden absolute top-16 left-0 right-0 bg-white border-t border-gray-200 shadow-lg max-h-[calc(100vh-4rem)] overflow-y-auto">
-      <div class="px-4 py-4 space-y-3">
-        <a href="index_1.html" class="block py-2 text-gray-700 hover:text-gray-900 font-medium">Home</a>
-        <div class="mobile-dropdown">
-          <button class="mobile-dropdown-toggle" data-dropdown="leistungen"><span>Leistungen</span><i class="mobile-dropdown-icon fas fa-chevron-down"></i></button>
-          <div class="mobile-dropdown-menu" data-dropdown-menu="leistungen">
-            <a href="gutachten_1.html">Planung</a>
-            <a href="schaeden_1.html">Begutachtung</a>
-            <a href="problemloesung_1.html">Beratung</a>
-            <a href="leichtbau_1.html">Leichtbau</a>
-          </div>
-        </div>
-        <div class="mobile-dropdown">
-          <button class="mobile-dropdown-toggle" data-dropdown="wissen"><span>Wissen</span><i class="mobile-dropdown-icon fas fa-chevron-down"></i></button>
-          <div class="mobile-dropdown-menu" data-dropdown-menu="wissen">
-            <a href="fachbeitrage_1.html">Fachbeiträge</a>
-            <a href="seminare_1.html">Seminare</a>
-          </div>
-        </div>
-        <div class="mobile-dropdown">
-          <button class="mobile-dropdown-toggle" data-dropdown="unternehmen"><span>Unternehmen</span><i class="mobile-dropdown-icon fas fa-chevron-down"></i></button>
-          <div class="mobile-dropdown-menu" data-dropdown-menu="unternehmen">
-            <a href="wir_1.html">Über uns</a>
-            <a href="karriere_1.html">Karriere</a>
-          </div>
-        </div>
-        <a href="kontakt_1.html" class="block py-2 text-gray-700 hover:text-gray-900 font-medium">Kontakt</a>
-      </div>
+    <div class="max-w-7xl mx-auto px-4 h-24 flex justify-between items-center">
+      <a href="index_1.html" class="flex items-center"><img src="Logo-ZBN-1.png" alt="ZBN Civil Engineers" class="h-20 w-auto object-contain"></a>
+      <div class="hidden md:flex space-x-8"><a href="index_1.html" class="text-gray-700">Home</a><a href="wir_1.html" class="text-gray-900 font-medium">Wir</a><a href="karriere_1.html" class="text-gray-700">Karriere</a><a href="kontakt_1.html" class="text-gray-700">Kontakt</a></div>
     </div>
   </nav>
 
   <section class="pt-32 pb-20 px-4" style="background:linear-gradient(135deg,#f7f9fc 0%,#fff 100%)">
     <div class="max-w-4xl mx-auto text-center">
-      <i class="fas fa-users text-6xl mb-6" style="color:var(--color-primary-600)"></i>
+      <i class="fas fa-users text-6xl mb-6" style="color:var(--p)"></i>
       <h1 class="text-5xl font-bold mb-6">Das sind Wir</h1>
-      <p class="text-xl text-gray-600">Ein kleines Unternehmen mit Hauptsitz im schönen Münsterland – Coesfeld</p>
+      <p class="text-xl text-gray-600">Wir sind ein kleines Unternehmen mit Hauptsitz im schönen Münsterland - Coesfeld</p>
     </div>
   </section>
 
@@ -91,45 +31,31 @@
     <div class="max-w-5xl mx-auto">
       <div class="prose prose-lg max-w-none">
         <h2 class="text-3xl font-bold mb-8">Unser Team</h2>
-        <p class="text-lg text-gray-700 mb-6">Wir sind Konstrukteure, Ingenieure, Azubis und eine Büroorganisatorin. Gemeinsam bilden wir ein eingespieltes Team mit langjähriger Erfahrung im Bereich Leichtbau und Gebäudehüllen.</p>
+        <p class="text-lg text-gray-700 mb-6">Wir sind ein kleines Unternehmen mit Hauptsitz im schönen Münsterland - Coesfeld. Wir sind Konstrukteure, Ingenieure, Azubis und eine Bürokraft und arbeiten im Sinne einer modernen Unternehmensführung kommunikativ, motiviert, engagiert und mit flachen Hierarchien daran, unsere Leistungen kundenorientiert anzubieten.</p>
 
         <div class="grid md:grid-cols-3 gap-8 mt-12">
           <div class="text-center p-6 bg-gray-50 rounded-xl">
-            <i class="fas fa-hard-hat text-5xl mb-4" style="color:var(--color-primary-600)"></i>
+            <i class="fas fa-hard-hat text-5xl mb-4" style="color:var(--p)"></i>
             <h3 class="text-xl font-semibold mb-2">Ingenieure</h3>
             <p class="text-gray-600">Erfahrene Bauingenieure mit Expertise in Statik und Konstruktion</p>
           </div>
           <div class="text-center p-6 bg-gray-50 rounded-xl">
-            <i class="fas fa-pencil-ruler text-5xl mb-4" style="color:var(--color-primary-600)"></i>
+            <i class="fas fa-pencil-ruler text-5xl mb-4" style="color:var(--p)"></i>
             <h3 class="text-xl font-semibold mb-2">Konstrukteure</h3>
             <p class="text-gray-600">Präzise Planung und Umsetzung Ihrer Projekte</p>
           </div>
           <div class="text-center p-6 bg-gray-50 rounded-xl">
-            <i class="fas fa-graduation-cap text-5xl mb-4" style="color:var(--color-primary-600)"></i>
+            <i class="fas fa-graduation-cap text-5xl mb-4" style="color:var(--p)"></i>
             <h3 class="text-xl font-semibold mb-2">Nachwuchs</h3>
             <p class="text-gray-600">Ausbildung zum Bauzeichner und Techniker</p>
           </div>
         </div>
 
-        <h2 class="text-3xl font-bold mt-16 mb-8">Unsere Werte</h2>
-        <div class="grid md:grid-cols-2 gap-6">
-          <div class="flex items-start">
-            <i class="fas fa-check-circle text-2xl mr-4 mt-1" style="color:var(--color-primary-600)"></i>
-            <div><h4 class="font-semibold mb-2">Kompetenz</h4><p class="text-gray-600">Langjährige Erfahrung und fundiertes Fachwissen</p></div>
-          </div>
-          <div class="flex items-start">
-            <i class="fas fa-check-circle text-2xl mr-4 mt-1" style="color:var(--color-primary-600)"></i>
-            <div><h4 class="font-semibold mb-2">Zuverlässigkeit</h4><p class="text-gray-600">Termingerechte und qualitativ hochwertige Leistungen</p></div>
-          </div>
-          <div class="flex items-start">
-            <i class="fas fa-check-circle text-2xl mr-4 mt-1" style="color:var(--color-primary-600)"></i>
-            <div><h4 class="font-semibold mb-2">Unkompliziert</h4><p class="text-gray-600">Direkte Kommunikation und schnelle Lösungen</p></div>
-          </div>
-          <div class="flex items-start">
-            <i class="fas fa-check-circle text-2xl mr-4 mt-1" style="color:var(--color-primary-600)"></i>
-            <div><h4 class="font-semibold mb-2">Regional</h4><p class="text-gray-600">Verwurzelt im Münsterland, tätig deutschlandweit</p></div>
-          </div>
-        </div>
+        <h2 class="text-3xl font-bold mt-16 mb-8">Was uns ausmacht:</h2>
+        <p class="text-lg text-gray-700 mb-6">Schon vor Eintritt der Corona-Pandemie haben wir viel Wert daraufgelegt, flexibel arbeiten zu können. Das bedeutet, wir geben unseren Mitarbeitern die Möglichkeit von überall aus arbeiten zu können, ihre Arbeitszeiten flexibel (und familienfreundlich) zu gestalten und durch entsprechende Technik auch z.B. per Videokonferenz effektiv an Meetings teilnehmen zu können. Das motiviert nicht nur unsere Mitarbeiter- es schafft Möglichkeiten, flexibel auf Kundenanliegen reagieren zu können, Zeitmanagement für Sie und für uns zu optimieren UND: Wir können international agieren!</p>
+        <p class="text-lg text-gray-700 mb-6">Auch als kleineres Unternehmen ist es uns wichtig, Kunden und Projekte auch über die Landesgrenzen hinaus zu betreuen. Durch Telefon – und Videokonferenzen, Montageanweisungen per Video, Anpassung der Arbeitszeiten im Hinblick auf Zeitverschiebungen, uvm. können wir Projekte in Indonesien genauso kompetent betreuen wie in Hamburg.</p>
+        <p class="text-lg text-gray-700 mb-8">Durch die langjährige Arbeit in Indien verfügen wir über diverses Hintergrundwissen, was uns stark macht im Umgang mit landesspezifischen Gegebenheiten. Schauen Sie gern einmal auf unserer Homepage, welche internationalen Projekte wir bereits begleiten durften!</p>
+        
       </div>
     </div>
   </section>
@@ -138,28 +64,10 @@
     <div class="max-w-4xl mx-auto text-center">
       <h2 class="text-3xl font-bold mb-6">Werden Sie Teil unseres Teams</h2>
       <p class="text-xl text-gray-600 mb-8">Wir suchen laufend qualifizierte Mitarbeiter und bieten Ausbildungsplätze an</p>
-      <a href="karriere_1.html" class="inline-block px-8 py-4 text-lg font-semibold rounded-lg text-white" style="background-color:var(--color-primary-600)">Zu den Stellenangeboten</a>
+      <a href="karriere_1.html" class="inline-block px-8 py-4 text-lg font-semibold rounded-lg text-white" style="background-color:var(--p)">Zu den Stellenangeboten</a>
     </div>
   </section>
 
   <footer class="py-8 px-4 bg-white border-t"><div class="max-w-7xl mx-auto text-center"><p class="text-sm text-gray-600">© 2025 ZBN Civil Engineers GmbH</p></div></footer>
-
-  <script>
-    const mobileMenuBtn = document.getElementById('mobile-menu-btn');
-    const mobileMenu = document.getElementById('mobile-menu');
-    mobileMenuBtn.addEventListener('click', () => {
-      mobileMenu.classList.toggle('hidden');
-    });
-    const mobileDropdownToggles = document.querySelectorAll('.mobile-dropdown-toggle');
-    mobileDropdownToggles.forEach(toggle => {
-      toggle.addEventListener('click', () => {
-        const dropdownId = toggle.getAttribute('data-dropdown');
-        const dropdownMenu = document.querySelector(`[data-dropdown-menu="${dropdownId}"]`);
-        const dropdownIcon = toggle.querySelector('.mobile-dropdown-icon');
-        dropdownMenu.classList.toggle('open');
-        dropdownIcon.classList.toggle('open');
-      });
-    });
-  </script>
 </body>
 </html>
