--- a/kontakt_1.html
+++ b/kontakt_1.html
@@ -79,21 +79,35 @@
   <nav class="fixed top-0 left-0 right-0 z-50 bg-white shadow-sm">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
       <div class="flex justify-between items-center h-24">
-        <div class="flex-shrink-0">
-          <a href="index_1.html" class="flex items-center"><img src="Logo-ZBN-1.png" alt="ZBN Civil Engineers" class="h-20 w-auto object-contain"></a>
+        <a href="index_1.html" class="flex items-center">
+          <img src="Logo-ZBN-1.png" alt="ZBN Civil Engineers" class="h-20 w-auto object-contain">
+        </a>
+        <div class="hidden md:flex items-center space-x-8 text-base font-medium">
+          <a href="index_1.html" class="text-gray-700 hover:text-gray-900">Home</a>
+          <a href="gutachten_1.html" class="text-gray-700 hover:text-gray-900">Planung</a>
+          <a href="schaeden_1.html" class="text-gray-700 hover:text-gray-900">Begutachtung</a>
+          <a href="beispielgutachten_1.html" class="text-gray-700 hover:text-gray-900">Beispielgutachten</a>
+          <a href="problemloesung_1.html" class="text-gray-700 hover:text-gray-900">Beratung</a>
+          <a href="leichtbau_1.html" class="text-gray-700 hover:text-gray-900">Unser Fachgebiet</a>
+          <a href="wir_1.html" class="text-gray-700 hover:text-gray-900">Wir</a>
+          <a href="kontakt_1.html" class="text-gray-900 font-semibold">Kontakt</a>
         </div>
-        <div class="hidden md:flex space-x-8">
-          <a href="index_1.html" class="text-gray-700 hover:text-gray-900 font-medium">Home</a>
-          <a href="gutachten_1.html" class="text-gray-700 hover:text-gray-900 font-medium">Planung</a>
-          <a href="schaeden_1.html" class="text-gray-700 hover:text-gray-900 font-medium">Begutachtung</a>
-          <a href="problemloesung_1.html" class="text-gray-700 hover:text-gray-900 font-medium">Beratung</a>
-          <a href="leichtbau_1.html" class="text-gray-700 hover:text-gray-900 font-medium">Unser Fachgebiet</a>
-          <a href="wir_1.html" class="text-gray-700 hover:text-gray-900 font-medium">Wir</a>
-          <a href="kontakt_1.html" class="text-gray-900 font-medium">Kontakt</a>
-        </div>
-        <button id="mobile-menu-btn" class="md:hidden p-2 rounded-md text-gray-700 hover:bg-gray-100">
-          <i class="fas fa-bars text-xl"></i>
+        <button id="mobile-menu-toggle" class="md:hidden p-2 rounded-md text-gray-700 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200">
+          <span class="sr-only">Menü öffnen</span>
+          <i class="fas fa-bars text-2xl"></i>
         </button>
+      </div>
+    </div>
+    <div id="mobile-menu" class="hidden md:hidden border-t border-gray-200 bg-white shadow-lg">
+      <div class="px-4 py-4 space-y-3">
+        <a href="index_1.html" class="block py-2 text-gray-700 hover:text-gray-900">Home</a>
+        <a href="gutachten_1.html" class="block py-2 text-gray-700 hover:text-gray-900">Planung</a>
+        <a href="schaeden_1.html" class="block py-2 text-gray-700 hover:text-gray-900">Begutachtung</a>
+        <a href="beispielgutachten_1.html" class="block py-2 text-gray-700 hover:text-gray-900">Beispielgutachten</a>
+        <a href="problemloesung_1.html" class="block py-2 text-gray-700 hover:text-gray-900">Beratung</a>
+        <a href="leichtbau_1.html" class="block py-2 text-gray-700 hover:text-gray-900">Unser Fachgebiet</a>
+        <a href="wir_1.html" class="block py-2 text-gray-700 hover:text-gray-900">Wir</a>
+        <a href="kontakt_1.html" class="block py-2 text-gray-900 font-semibold">Kontakt</a>
       </div>
     </div>
   </nav>
@@ -244,16 +258,54 @@
     </div>
   </footer>
 
+  <div id="cookie-banner" class="fixed bottom-4 left-1/2 -translate-x-1/2 w-[92%] max-w-3xl rounded-xl border border-gray-200 bg-white shadow-xl px-6 py-4 flex flex-col md:flex-row md:items-center md:justify-between gap-4 z-[100]">
+    <p class="text-sm" style="color: var(--color-text-secondary);">
+      Wir verwenden ausschließlich technisch notwendige Cookies. Die Auslieferung erfolgt über Cloudflare Pages (DSGVO-konformer Auftragsverarbeiter).
+      Details findest du in unserer <a href="datenschutz_1.html" class="underline" style="color: var(--color-primary-600);">Datenschutzerklärung</a>.
+    </p>
+    <button id="cookie-accept" class="inline-flex items-center justify-center px-5 py-2 text-sm font-semibold text-white bg-blue-600 hover:bg-blue-700 rounded-lg transition-colors">
+      Verstanden
+    </button>
+  </div>
+
   <script>
-    document.getElementById('mobile-menu-btn').addEventListener('click', function() {
-      alert('Mobile menu - implement dropdown');
-    });
+    const mobileMenuToggle = document.getElementById('mobile-menu-toggle');
+    const mobileMenu = document.getElementById('mobile-menu');
+
+    if (mobileMenuToggle && mobileMenu) {
+      mobileMenuToggle.addEventListener('click', () => {
+        mobileMenu.classList.toggle('hidden');
+      });
+
+      mobileMenu.querySelectorAll('a').forEach(link => {
+        link.addEventListener('click', () => mobileMenu.classList.add('hidden'));
+      });
+    }
 
     document.getElementById('contact-form').addEventListener('submit', function(e) {
       e.preventDefault();
       alert('Vielen Dank für Ihre Nachricht! Wir melden uns schnellstmöglich bei Ihnen.');
       this.reset();
     });
+
+    (function() {
+      const banner = document.getElementById('cookie-banner');
+      const acceptBtn = document.getElementById('cookie-accept');
+
+      if (!banner || !acceptBtn) {
+        return;
+      }
+
+      if (localStorage.getItem('zbnCookieConsent') === 'accepted') {
+        banner.remove();
+        return;
+      }
+
+      acceptBtn.addEventListener('click', () => {
+        localStorage.setItem('zbnCookieConsent', 'accepted');
+        banner.remove();
+      });
+    })();
   </script>
 </body>
 </html>
