Fix external image URLs and update email address to info@zbn.de

--- a/kontakt_1.html
+++ b/kontakt_1.html
@@ -195,8 +195,8 @@
               <i class="fas fa-envelope text-2xl mr-4" style="color: var(--color-primary-600);"></i>
               <div>
                 <p class="font-semibold" style="color: var(--color-text-primary);">E-Mail</p>
-                <a href="mailto:info@bbf1mix.myrdbx.io" style="color: var(--color-text-secondary);" class="hover:underline">
-                  info@bbf1mix.myrdbx.io
+                <a href="mailto:info@zbn.de" style="color: var(--color-text-secondary);" class="hover:underline">
+                  info@zbn.de
                 </a>
               </div>
             </div>
