Unify navigation structure: consistent links on all pages with compact spacing

--- a/kontakt_1.html
+++ b/kontakt_1.html
@@ -82,14 +82,17 @@
         <a href="index_1.html" class="flex items-center">
           <img src="Logo-ZBN-1.png" alt="ZBN Civil Engineers" class="h-20 w-auto object-contain">
         </a>
-        <div class="hidden md:flex items-center space-x-8 text-base font-medium">
+        <div class="hidden md:flex items-center space-x-6 text-sm font-medium">
           <a href="index_1.html" class="text-gray-700 hover:text-gray-900">Home</a>
           <a href="gutachten_1.html" class="text-gray-700 hover:text-gray-900">Planung</a>
           <a href="schaeden_1.html" class="text-gray-700 hover:text-gray-900">Begutachtung</a>
           <a href="beispielgutachten_1.html" class="text-gray-700 hover:text-gray-900">Beispielgutachten</a>
           <a href="problemloesung_1.html" class="text-gray-700 hover:text-gray-900">Beratung</a>
-          <a href="leichtbau_1.html" class="text-gray-700 hover:text-gray-900">Unser Fachgebiet</a>
+          <a href="leichtbau_1.html" class="text-gray-700 hover:text-gray-900">Fachgebiet</a>
+          <a href="fachbeitrage_1.html" class="text-gray-700 hover:text-gray-900">Fachbeiträge</a>
+          <a href="seminare_1.html" class="text-gray-700 hover:text-gray-900">Seminare</a>
           <a href="wir_1.html" class="text-gray-700 hover:text-gray-900">Wir</a>
+          <a href="karriere_1.html" class="text-gray-700 hover:text-gray-900">Karriere</a>
           <a href="kontakt_1.html" class="text-gray-900 font-semibold">Kontakt</a>
         </div>
         <button id="mobile-menu-toggle" class="md:hidden p-2 rounded-md text-gray-700 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200">
@@ -105,8 +108,11 @@
         <a href="schaeden_1.html" class="block py-2 text-gray-700 hover:text-gray-900">Begutachtung</a>
         <a href="beispielgutachten_1.html" class="block py-2 text-gray-700 hover:text-gray-900">Beispielgutachten</a>
         <a href="problemloesung_1.html" class="block py-2 text-gray-700 hover:text-gray-900">Beratung</a>
-        <a href="leichtbau_1.html" class="block py-2 text-gray-700 hover:text-gray-900">Unser Fachgebiet</a>
+        <a href="leichtbau_1.html" class="block py-2 text-gray-700 hover:text-gray-900">Fachgebiet</a>
+        <a href="fachbeitrage_1.html" class="block py-2 text-gray-700 hover:text-gray-900">Fachbeiträge</a>
+        <a href="seminare_1.html" class="block py-2 text-gray-700 hover:text-gray-900">Seminare</a>
         <a href="wir_1.html" class="block py-2 text-gray-700 hover:text-gray-900">Wir</a>
+        <a href="karriere_1.html" class="block py-2 text-gray-700 hover:text-gray-900">Karriere</a>
         <a href="kontakt_1.html" class="block py-2 text-gray-900 font-semibold">Kontakt</a>
       </div>
     </div>
